--- a/ASMaIoP.Client/View/Pages/PageRightCreateJob.xaml
+++ b/ASMaIoP.Client/View/Pages/PageRightCreateJob.xaml
@@ -32,9 +32,16 @@
                    VerticalAlignment="Center"
                    HorizontalAlignment="Center"
                     ></TextBlock>
+        <TextBlock Text="Зарплата:"
+                   Grid.Row="2"
+                   FontSize="22"
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Center"
+                    ></TextBlock>
         <Grid Grid.Column="1"
-              Grid.RowSpan="2">
+              Grid.RowSpan="3">
             <Grid.RowDefinitions>
+                <RowDefinition/>
                 <RowDefinition/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
@@ -55,10 +62,19 @@
                        HorizontalAlignment="Left"
                        Width="200"
                        Height="20">
-
             </ComboBox>
+            <TextBox  Grid.Row="3"
+                      x:Name="Salary"
+                      Background="Transparent"
+                      BorderBrush="Transparent"
+                      Margin="0 10 0 0"
+                      Height="50"
+                      Width="200"
+                      FontSize="22"
+                      HorizontalAlignment="Left"/>
             <Rectangle Margin="0 0 0 37" HorizontalAlignment="Left" VerticalAlignment="Bottom" Fill="WhiteSmoke" Width="200" Height="2"></Rectangle>
             <Rectangle Margin="0 0 0 37" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Bottom" Fill="WhiteSmoke" Width="200" Height="2"></Rectangle>
+            <Rectangle Margin="0 0 0 37" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Bottom" Fill="WhiteSmoke" Width="200" Height="2"></Rectangle>
         </Grid>
 
         <Grid Grid.Column="2"
@@ -106,6 +122,7 @@
                     ></Button>
             <Button Grid.Row="6"
                     x:Name="Delete"
+                    Click="Delete_Click"
                     Visibility="Collapsed"
                     Style="{DynamicResource RoundCorner}"
                     HorizontalAlignment="Right"
